log/HamamatsuApp_log_181129_151018.txt
2018-11-29T15:10:18|CRITICAL|root|Unhandled exception:Traceback (most recent call last):
  File "C:\LabPrograms\Python\Camera-ScopeFoundry\CameraApp.py", line 51, in <module>
    app = HamamatsuApp(sys.argv)
  File "C:\LabPrograms\Python\Camera-ScopeFoundry\CameraApp.py", line 18, in __init__
    super().__init__(*kwds) # *kwds is needed since in the main we pass as argument sys.argv. Without
  File "C:\ProgramData\Anaconda3\lib\site-packages\ScopeFoundry\base_app.py", line 332, in __init__
    self.setup()
  File "C:\LabPrograms\Python\Camera-ScopeFoundry\CameraApp.py", line 31, in setup
    from CameraMeasurement import HamamatsuMeasurement
  File "C:\LabPrograms\Python\Camera-ScopeFoundry\CameraMeasurement.py", line 92
    break
    ^
SyntaxError: 'break' outside loop

